<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>es.caib.distribucio</groupId>
	<artifactId>distribucio</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.16</version>
	</parent>
	<properties>
		<springboot.version>2.7.16</springboot.version>
		<liquibase.version>4.4.3</liquibase.version>
		<openapi.version>1.7.0</openapi.version>
		<orika.version>1.5.4</orika.version>
		<xdocreport.version>2.0.2</xdocreport.version>
		<arxiu.api.version>2.0.27</arxiu.api.version>
		<arxiu.filesystem.version>2.0.6</arxiu.filesystem.version>
		<portafib.version>1.1</portafib.version>
		<regweb.version>3.0.5</regweb.version>
		<dir3caib.version>1.0.7</dir3caib.version>
		<bouncycastle.version>1.46</bouncycastle.version>
		<implementation.vendor>Límit Tecnologies</implementation.vendor>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<skipTests>true</skipTests>
		<!-- <github.global.server>github</github.global.server>
		<spring.version>3.2.17.RELEASE</spring.version>
		<spring-security.version>3.2.9.RELEASE</spring-security.version>
		<spring-data-jpa.version>1.6.6.RELEASE</spring-data-jpa.version>
		<hibernate.version>3.6.5.Final</hibernate.version>
		<hibernate.validator.version>4.1.0.Final</hibernate.validator.version>
		<ehcache.version>2.10.1</ehcache.version>
		<orika.version>1.1.7</orika.version>
		<groovy.version>2.1.6</groovy.version>
		<jackson.version>2.6.3</jackson.version>
		<xdocreport.version>2.0.2</xdocreport.version>
		<bouncycastle.version>1.46</bouncycastle.version>
		<cxf.version>2.2.12</cxf.version>
		<portafib.version>1.1</portafib.version>
		<regweb.version>3.0.5</regweb.version>
		<dir3caib.version>1.0.7</dir3caib.version>
		<arxiu.api.version>2.0.27</arxiu.api.version>
		<arxiu.filesystem.version>2.0.6</arxiu.filesystem.version>
		<slf4j.version>1.5.11</slf4j.version>
		<maven.test.skip>true</maven.test.skip>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<build.timestamp>${maven.build.timestamp}</build.timestamp>
		<version.revision>50</version.revision>
		<version.full>${project.version}.${version.revision}</version.full>
		<version.date>2023.09.07 07:00h</version.date> -->
	</properties>
	<modules>
		<!--module>distribucio-core</module>
		<module>distribucio-war</module>
		<module>distribucio-api-externa</module>
		<module>distribucio-core-api</module>
		<module>distribucio-ear</module>
		<module>distribucio-lib-common</module>
		<module>distribucio-plugin</module>
		<module>distribucio-plugin-impl</module>
		<module>distribucio-ws-client</module>
		<module>distribucio-backoffice-utils</module>
		<module>distribucio-api-interna</module>
		<module>distribucio-rest-client</module-->
		<module>distribucio-back</module>
		<module>distribucio-ear</module>
		<module>distribucio-persistence</module>
		<module>distribucio-plugin</module>
		<module>distribucio-plugin-impl</module>
		<module>distribucio-service</module>
		<module>distribucio-service-intf</module>
		<module>distribucio-ejb</module>
	</modules>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.github</groupId>
				<artifactId>site-maven-plugin</artifactId>
				<version>0.12</version>
				<configuration>
					<message>Maven artifacts for ${project.version}</message>
					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
					<noJekyll>true</noJekyll>
					<branch>refs/heads/gh-pages</branch>
					<includes>
						<include>**/*</include>
					</includes>
					<path>maven</path>
					<repositoryName>maven</repositoryName>
					<repositoryOwner>GovernIB</repositoryOwner>
					<server>github_governib_maven</server>
					<merge>true</merge>
					<dryRun>false</dryRun>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>site</goal>
						</goals>
						<phase>deploy</phase>
					</execution>
				</executions>
			</plugin>
			<!-- <plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
				<configuration>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
				</configuration>
			</plugin> -->
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>github_governib_maven</id>
			<name>GitHub GovernIB Maven Repository</name>
			<url>file://${project.build.directory}/mvn-repo</url>
		</repository>
	</distributionManagement>
</project>